--- a/app/src/main/res/layout/activity_uploadbooks.xml
+++ b/app/src/main/res/layout/activity_uploadbooks.xml
@@ -44,7 +44,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/bookTitle"
+                        android:id="@+id/tvUpBookName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
@@ -56,7 +56,7 @@
                         tools:layout_editor_absoluteY="32dp" />
 
                     <EditText
-                        android:id="@+id/bookAuthor"
+                        android:id="@+id/tvUpWriterName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -80,7 +80,7 @@
                 android:textColor="@color/black" />
 
             <EditText
-                android:id="@+id/book_description"
+                android:id="@+id/tvUpDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -107,7 +107,7 @@
                         android:textColor="@color/black" />
 
                     <EditText
-                        android:id="@+id/author"
+                        android:id="@+id/tvUpWriterName2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
