--- a/app/src/main/res/layout/activity_swap_page.xml
+++ b/app/src/main/res/layout/activity_swap_page.xml
@@ -28,9 +28,9 @@
         android:id="@+id/horizontalScrollView"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="212dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button6">
 
@@ -191,17 +191,18 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSwap"
         android:layout_width="110dp"
         android:layout_height="35dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="96dp"
         android:background="@drawable/continue_with_button"
         android:backgroundTint="@color/cat_button_stroke"
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/swap"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/ivAdminSwapBook"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
@@ -222,13 +223,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:background="@drawable/ic_swap"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/ivAdminSwapBook"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivAdminSwapBook"
         android:layout_width="80dp"
         android:layout_height="125dp"
         android:layout_marginTop="16dp"
