--- a/app/src/main/res/layout/activity_fetch_book.xml
+++ b/app/src/main/res/layout/activity_fetch_book.xml
@@ -43,8 +43,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/tvUpBookName"
+                    <TextView
+                        android:id="@+id/tvFetBookName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
@@ -56,8 +56,8 @@
                         tools:layout_editor_absoluteX="189dp"
                         tools:layout_editor_absoluteY="32dp" />
 
-                    <EditText
-                        android:id="@+id/tvUpWriterName"
+                    <TextView
+                        android:id="@+id/tvFetWriterName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -81,7 +81,7 @@
                 android:text="Description"
                 android:textColor="@color/black" />
 
-            <EditText
+            <TextView
                 android:id="@+id/tvUpDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
                         android:text="Author:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/tvUpWriterName2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -124,7 +124,7 @@
                         android:text="Publisher:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/tvUpFeedback"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -140,7 +140,7 @@
                         android:text="ISBN:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/isbn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -156,7 +156,7 @@
                         android:text="Edition:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/edition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -172,7 +172,7 @@
                         android:text="Number of Pages:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/pages"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -188,7 +188,7 @@
                         android:text="Country:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/country"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -204,7 +204,7 @@
                         android:text="Language:"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/language"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -220,24 +220,6 @@
 
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="36dp"
-        android:enabled="false"
-        android:backgroundTint="@color/green"
-        android:gravity="center"
-        android:text=" Save "
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
 
 
     <LinearLayout
