--- a/app/src/main/res/layout/activity_swap_page.xml
+++ b/app/src/main/res/layout/activity_swap_page.xml
@@ -205,13 +205,13 @@
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imageView2"
         android:layout_width="80dp"
         android:layout_height="125dp"
         android:layout_marginStart="68dp"
         android:layout_marginTop="16dp"
-        android:background="@color/Google"
+        android:background="@drawable/uploadbook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
