--- a/app/src/main/res/layout/activity_swap_page.xml
+++ b/app/src/main/res/layout/activity_swap_page.xml
@@ -7,32 +7,14 @@
     tools:context=".swap_page">
 
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="110dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/continue_with_button"
-        android:backgroundTint="@color/cat_button_stroke"
-        android:gravity="center"
-        android:text="@string/my_books"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-
-
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="212dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6">
+        tools:layout_editor_absoluteY="247dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
