--- a/app/src/main/res/layout/activity_save_book.xml
+++ b/app/src/main/res/layout/activity_save_book.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_shadow_end_color"
-    tools:context=".SingUpActivity">
+    tools:context=".SaveBookActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
+        android:layout_width="404dp"
+        android:layout_height="370dp"
         android:layout_margin="20dp"
         android:background="@color/white"
         app:cardCornerRadius="15dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.445">
+        app:layout_constraintVertical_bias="0.459">
 
         <LinearLayout
             android:layout_width="match_parent"
