--- a/app/src/main/res/layout/activity_uploadbooks.xml
+++ b/app/src/main/res/layout/activity_uploadbooks.xml
@@ -44,7 +44,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/tvUpBookName"
+                        android:id="@+id/tvUpBkName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
@@ -57,7 +57,7 @@
                         tools:layout_editor_absoluteY="32dp" />
 
                     <EditText
-                        android:id="@+id/tvUpWriterName"
+                        android:id="@+id/tvUpWrName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -82,7 +82,7 @@
                 android:textColor="@color/black" />
 
             <EditText
-                android:id="@+id/tvUpDescription"
+                android:id="@+id/tvUpDes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -125,7 +125,7 @@
                         android:textColor="@color/black" />
 
                     <EditText
-                        android:id="@+id/tvUpFeedback"
+                        android:id="@+id/tvUpFeedk"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
