--- a/app/src/main/res/layout/activity_novel.xml
+++ b/app/src/main/res/layout/activity_novel.xml
@@ -155,6 +155,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
+            android:id="@+id/homebtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
