--- a/app/src/main/res/layout/activity_swap_request.xml
+++ b/app/src/main/res/layout/activity_swap_request.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="144dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Book Number"
+        android:hint="Book number"
         app:layout_constraintBottom_toTopOf="@+id/btnSpRqst"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.597"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="Phone Number"
+        android:hint="Phone number"
         app:layout_constraintBottom_toTopOf="@+id/btnSpRqst"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
